Prevent wrap on small screen
boxes were wrapping downwards when small screen. now Fixed Wraping.
Now from onwards box size change instead wrap.

--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ header h1 {
     width:28%;
     justify-content: center;
     transition: 0.5s;
-    padding: 15px;
+    padding: 12px;
 }
 
 .gallery-item:hover{
